--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,7 +24,7 @@
         {{ .Params.title | default .Site.Author.name | default .Site.Title | emojify }}
       </h1>
       {{ with .Site.Author.headline }}
-        <h2 class="text-xl text-neutral-500 dark:text-neutral-400">
+        <h2 class="text-xl text-neutral-500 dark:text-neutral-400 mt-10">
           {{ . | markdownify | emojify }}
         </h2>
       {{ end }}
